# ncd-tec-book

./: .buildinfo  .gitignore  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
1-information-technology/: 001-it.html  002-computer-architecture.html  003-operating-systems.html  100-queues-and-stacks.html  101-graphs.html
5-information-security/: 510-RC4.html
_sources/: markdown-notebooks.ipynb  markdown.md
_sources/1-information-technology/: 003-operating-systems.md  100-queues-and-stacks.ipynb  101-graphs.ipynb
_sources/5-information-security/: 510-RC4.ipynb
book/: _config.yml  _toc.yml  intro.md
book/1-information-technology/: 001-it.md  003-operating-systems.md  100-queues-and-stacks.ipynb  101-graphs.ipynb
book/5-information-security/: 510-RC4.ipynb
scripts/: book-build.sh  build-book.sh  pkg-build.sh  pkg-publish.sh  upload-book.sh
src/ncdtecbook/: example.py
src/ncdtecbook/isec/: rc4.py
src/ncdtecbook/it/: graph.py
src/ncdtecbook2/: example.py
