[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncdtecbook"
version = "0.0.1.3"
authors = [
  { name="Suhel Hammoud", email="suhel.hammoud@gmail.com" },
]
description = "NCD-TEC Book examples"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/suhelhammoud/ncd-tec-book"
Issues = "https://github.com/suhelhammoud/ncd-tec-book/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/ncdtecbook"]